Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4696

Softkeys: Text disappears from textbox when predictive text is active.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.1
    • 3.x
    • None
    • None

    Description

      Device: 5800
      Firmware version: V 40.0.001 RnD
      Release: qt-embedded-s60-opensource20091005-4.6.0-tp1.exe
      Platform: ARMV5 UREL
      Compiler used: ARM/Thumb C/C++ Compiler, RVCT2.2 [Build 683]
      Application: Softkeys example
      Launched from: Fluidlauncher
      Problem description:

      With predictive text active, type something on textbox using virtual alphanumeric keyboard and press green ok sign to accept the text. Predicted bit is still underlined in the textbox. Now click Custom softkeys button -> Textbox clears. However, if you reopen the virtual alphanumeric keypad, the text is still visible there. Text should never vanish in the first place.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jokiniva Jukka Jokiniva (Inactive)
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes