Softkeys: Text disappears from textbox when predictive text is active.

If two QInputMethodEvent("preedittext", attributes) or more are send in a row, textedit is drawn empty.
Event creates lines based on isGettingInput flag and clears line every time there is preedit text.
On 2nd event lines are cleared but not created since e->preeditString() != cursor.block().layout()->preeditAreaText() set isGettingInput to zero.
When draw begins line count is checked. If no lines return. Moved layout->setPreeditArea() under if (isGettingInput) so pre-edit text is set only when text really changes.

http://bugreports.qt.nokia.com/browse/QTBUG-4696

Task-number:QTBUG-4696
Reviewed-by:Markku Luukkainen

Merge-request: 2132
Reviewed-by: Denis Dzyubenko <denis.dzyubenko@nokia.com>